🩹 fix: dark mode style sheet 우선순위 버그 수정
* dark mode 에서 일부 a 태그의 style sheet 우선순위가 의도와 다른 버그 수정

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -79,11 +79,11 @@ main {
   }
 }
 
-body {
+.body {
   @include body;
-  &.dark {
-    @include body($DARK_COLOR);
-  }
+}
+.body-dark {
+  @include body($DARK_COLOR);
 }
 
 ::-webkit-scrollbar {
